Fixing things for faster recognizer

--- a/sentences/de/_common.yaml
+++ b/sentences/de/_common.yaml
@@ -1,4 +1,6 @@
 language: de
+settings:
+  filter_with_regex: false
 responses:
   errors:
     no_intent: "Entschuldigung, das habe ich nicht verstanden"
