--- a/sentences/fr/_common.yaml
+++ b/sentences/fr/_common.yaml
@@ -628,21 +628,6 @@ lists:
       from: 1
       to: 100
 
-  timer_words_seconds:
-    values:
-      - in: "un|une"
-        out: "1"
-
-  timer_words_minutes:
-    values:
-      - in: "un|une"
-        out: "1"
-
-  timer_words_hours:
-    values:
-      - in: "un|une"
-        out: "1"
-
   timer_name:
     wildcard: true
 
@@ -708,14 +693,14 @@ expansion_rules:
 
   ### Timers ###
   # mix numerical and litteral value for seconds, minutes and hours for the setting of the duration of the timmer
-  nb_seconds_duration: "({timer_seconds:seconds}|{timer_words_seconds:seconds})"
-  nb_minutes_duration: "({timer_minutes:minutes}|{timer_words_minutes:minutes})"
-  nb_hours_duration: "({timer_hours:hours}|{timer_words_hours:hours})"
+  nb_seconds_duration: "{timer_seconds:seconds}"
+  nb_minutes_duration: "{timer_minutes:minutes}"
+  nb_hours_duration: "{timer_hours:hours}"
 
   # mix numerical and litteral value for seconds, minutes and hours for the request of the status of a timmer by its initial duration
-  nb_seconds_start: "({timer_seconds:start_seconds}|{timer_words_seconds:start_seconds})"
-  nb_minutes_start: "({timer_minutes:start_minutes}|{timer_words_minutes:start_minutes})"
-  nb_hours_start: "({timer_hours:start_hours}|{timer_words_hours:start_hours})"
+  nb_seconds_start: "{timer_seconds:start_seconds}"
+  nb_minutes_start: "{timer_minutes:start_minutes}"
+  nb_hours_start: "{timer_hours:start_hours}"
 
   # definition of the units for seconds, minutes and hours
   second_unit: "(seconde|secondes|sec|s)"
