More small fixes

--- a/tests/hu/todo_HassListAddItem.yaml
+++ b/tests/hu/todo_HassListAddItem.yaml
@@ -6,6 +6,6 @@ tests:
     intent:
       name: HassListAddItem
       slots:
-        item: "alma"
+        item: "Alma"
         name: "fontos dolgok"
     response: Az alma hozzáadva a listához
