--- a/tests/hu/todo_HassListAddItem.yaml
+++ b/tests/hu/todo_HassListAddItem.yaml
@@ -8,4 +8,4 @@ tests:
       slots:
         item: "Alma"
         name: "fontos dolgok"
-    response: Az alma hozzáadva a listához
+    response: Az Alma hozzáadva a listához
