Add Swedish HassListAddItem (#2505)

--- a/tests/sv/_fixtures.yaml
+++ b/tests/sv/_fixtures.yaml
@@ -109,6 +109,10 @@ entities:
       temperature: "20"
       temperature_unit: "°C"
 
+  - name: "Trader Joes"
+    id: "todo.trader_joes"
+    state: ""
+
   - name: "TV"
     id: "media_player.tv"
     state: "idle"
