[SL] HassGetState sentences and test adjustment, added a few (#2508)

--- a/sentences/sl/_common.yaml
+++ b/sentences/sl/_common.yaml
@@ -90,7 +90,7 @@ lists:
         out: "off"
   on_off_domains:
     values:
-      - in: "luč[i|k|ke]| svetil[ke|ki|k|ka|a|o|i]" # | noč[ne|ni|no|nih] luč[i|ke|ka|ki]"
+      - in: "luč[i|k|ke]| svetil[ke|ki|k|ka|a|o|i]"
         out: light
       - in: "ventilator[ji|ja|je|ju|jem]| ventilaci[je|jo|ja|jem]| prezračevanje"
         out: fan
