--- a/tests/de-CH/homeassistant_HassStartTimer.yaml
+++ b/tests/de-CH/homeassistant_HassStartTimer.yaml
@@ -106,6 +106,6 @@ tests:
       slots:
         minutes: 5
         conversation_command:
-          - "lösch ds liecht"
-          - "lösch ds liecht "
+          - "Lösch ds Liecht"
+          - "lösch ds Liecht"
     response: "Guet, wird i mache"
