More small fixes

--- a/sentences/sl/homeassistant_HassGetState.yaml
+++ b/sentences/sl/homeassistant_HassGetState.yaml
@@ -16,6 +16,7 @@ intents:
         excludes_context:
           domain:
             - cover
+            - binary_sensor
 
       - sentences:
           - "[[ali] (je|so) [[v|na] <area>]] [povej [mi]|povej|[ali] [morda] veš] (kater(e|a|o)|kakšn(e|a|i|o)) ({on_off_domains:domain} [so|je] {on_off_states:state}|{on_off_states:state} [so|je] {on_off_domains:domain}) [[v|na] <area>]"
