--- a/tests/sl/_test_failures.yaml
+++ b/tests/sl/_test_failures.yaml
@@ -15,3 +15,4 @@ sentences:
   - "Izključi kuhinjski ventilator"
   - "Izključi ventilatorje"
   - "Izključi ventilacijo"
+  - "ali veš katera stikala so vklopljena v kuhinji?"
