--- a/tests/sl/_test_failures.yaml
+++ b/tests/sl/_test_failures.yaml
@@ -16,3 +16,4 @@ sentences:
   - "Izključi ventilatorje"
   - "Izključi ventilacijo"
   - "ali veš katera stikala so vklopljena v kuhinji?"
+  - "ali veš katere luči so vključene?"
