--- a/sentences/fr/_common.yaml
+++ b/sentences/fr/_common.yaml
@@ -518,6 +518,7 @@ expansion_rules:
   monte: (monte|monter)
   baisse: (baisse|baisser|descendre|descends)
   nettoie: (aspire|aspirer|nettoie|nettoyer)
+  rappelle: "((rappelle|rappeler|rappelez|<rappelle_dirty>)[-][moi])"
 
   # Dirty Verbs. We have some heavy STT limitations today. We're willing to support this hack for now. Ideally this should be removed once we have a better STT engine. Hence the fact that we decided to put it on a different expansion rules. The goal of this expansion rule is to be removed in the future.
   # Éteins
@@ -527,6 +528,8 @@ expansion_rules:
   # ferme
   ferme_dirty: "faire"
   minuteur_dirty: "minuteurs"
+  # rappelle
+  rappelle_dirty: "rappele"
 
   # Domains and Things
   lumiere: "(lumière[s]|lampe[s]|ampoule[s]|éclairage[s])"
@@ -538,8 +541,8 @@ expansion_rules:
   media: "(morceau|chanson|musique|son|élément|podcast|film|vidéo|épisode|radio|média)"
   lecture: "(lecture|visionnage)"
   volume: "(volume|son|watt[s])"
-  minuteur: "(compte a rebours)|(compte à rebours)|(minuteur)|(décompte)|<minuteur_dirty>"
-  minuteurs: "(comptes a rebours)|(comptes à rebours)|(minuteurs)|(décomptes)"
+  minuteur: "(compte (a|à) rebours|minuteur|décompte|rappel|<minuteur_dirty>"
+  minuteurs: "(comptes (a|à) rebours|minuteurs|décomptes|rappels"
   serrure: "(verrou[s]|serrure[s]|loquet[s]|porte[s])"
 
   ### Timers ###
