--- a/sentences/fr/homeassistant_HassStartTimer.yaml
+++ b/sentences/fr/homeassistant_HassStartTimer.yaml
@@ -103,6 +103,15 @@ intents:
         expansion_rules:
           appele: "(appelé|nommé|surnommé|pour [<le>])"
 
+      # Reminder with action
+      - sentences:
+          # "Rappelle-moi dans 5 minutes de fermer la fenêtre"
+          - "<rappelle> dans <timer_duration> de {timer_name:name}"
+          # This one is shadowed by timed commands below for now
+          # - "<rappelle> de {timer_name:name} dans <timer_duration>"
+          # Special case
+          - "Rappel pour {timer_name:name} dans <timer_duration>"
+
       - sentences:
           # "Ouvre les volets du salon dans 5 minutes"
           - "{timer_command:conversation_command} dans <timer_duration>"
