--- a/tests/fr/homeassistant_HassStartTimer.yaml
+++ b/tests/fr/homeassistant_HassStartTimer.yaml
@@ -149,6 +149,10 @@ tests:
       - "Mets un minuteur de 10 minutes pour fermer la fenêtre"
       - "Crée un minuteur pour fermer la fenêtre dans 10 minutes"
       - "Lance un minuteur pour fermer la fenêtre dans 10 minutes"
+      - "Mets un rappel pour fermer la fenêtre dans 10 minutes"
+      # - "Rappelle-moi de fermer la fenêtre dans 10 minutes"
+      - "Rappelle-moi dans 10 minutes de fermer la fenêtre"
+      - "Rappel pour fermer la fenêtre dans 10 minutes"
     intent:
       name: HassStartTimer
       slots:
